--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Maxim Lucas</title>
+    <title>Billy B - Portfoilo</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,11 +10,11 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <meta name="keywords" content="portfolio, personal website, developer, french, english" />
-    <meta name="description" content="Hey! I'm a french dev. This is my personal website." />
-    <meta property="og:title" content="Maxim Lucas" />
-    <meta property="og:description" content="Hey! I'm a french dev. This is my personal website." />
-    <meta property="og:site_name" content="Maxim Lucas" />
+    <meta name="keywords" content="portfolio, personal website, developer, italian, english" />
+    <meta name="description" content="Hey! I'm a US dev. This is my personal website." />
+    <meta property="og:title" content="Billy B" />
+    <meta property="og:description" content="Hey! I'm a US dev. This is my personal website." />
+    <meta property="og:site_name" content="Billy B" />
     <meta property="og:type" content="website" />
 
     <meta property="og:image" itemprop="image" content="/logo.jpg" />
@@ -22,20 +22,20 @@
     <meta property="og:image:secure_url" content="/logo.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
 
-    <meta name="twitter:title" content="Maxim Lucas"/>
-    <meta name="twitter:description" content="Hey! I'm a french dev. This is my personal website."/>
+    <meta name="twitter:title" content="Billy B"/>
+    <meta name="twitter:description" content="Hey! I'm a US dev. This is my personal website."/>
     <meta name="twitter:image" content="/logo.jpg"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:image:alt" content="Website logo with the letter M in capital with a blue background"/>
-    <meta name="twitter:site" content="@x_shadow_gc"/>
-    <meta name="twitter:creator" content="@x_shadow_gc"/>
+    <meta name="twitter:site" content=""/>
+    <meta name="twitter:creator" content=""/>
 
     <script defer src="https://umami.fr6.xshadow.xyz/script.js" data-website-id="be744af7-a173-470c-90a5-8d8a6249047b"></script>
   </head>
   <body style="background-color: #1432c9;">
     <div id="app"></div>
     <!-- seo test -->
-    <p style="visibility: hidden;">Hey! I'm a french dev and this is my portfolio!</p>
+    <p style="visibility: hidden;">Hey! I'm a US dev and this is my portfolio!</p>
     <script type="module" src="/src/main.tsx">s</script>
   </body>
 </html>
